--- a/src/css/style.css
+++ b/src/css/style.css
@@ -109,6 +109,17 @@ button {
 .cart:hover svg {
   fill: gray;
 }
+#super{
+  width: 20px;
+  height: 20px;
+  border-radius: 10px;
+  
+  z-index: 1;
+  position: absolute;
+  top: 10px;
+  right: 0px;
+  color: black;
+}
 
 /* End cart icon styles */
 
