--- a/src/css/style.css
+++ b/src/css/style.css
@@ -110,6 +110,18 @@ button {
   fill: gray;
 }
 
+#super{
+  width: 15px;
+  height: 15px;
+  border-radius: 10px;
+  
+  z-index: 1;
+  position: absolute;
+  top: 10px;
+  right: 0px;
+  color: black;
+}
+
 /* End cart icon styles */
 
 .mission {
