Co-authored-by: Tsosie, Everett <SgtTacos@users.noreply.github.com> Co-authored-by: Daniel Carr <DCPenguin73@users.noreply.github.com>

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -238,3 +238,14 @@ footer {
     transform: rotateZ(720deg);
   }
 }
+
+/* Styling for main menu icons */
+.main-menu {
+  display: inline-grid;
+  gap: 2em;
+  margin-left: 20%;
+  margin-right: 20%;
+}
+.main-menu div {
+  grid-row: 1;
+}
